0029719: Enhance GeomPlate_BuildPlateSurface with the progress information and the user break response