src/Plate/Plate_Plate.hxx
@@ -30,6 +30,7 @@
 #include <Standard_Real.hxx>
 #include <TColgp_HArray2OfXYZ.hxx>
 #include <TColgp_SequenceOfXY.hxx>
+#include <Message_ProgressIndicator.hxx>
 class Plate_PinpointConstraint;
 class Plate_LinearXYZConstraint;
 class Plate_LinearScalarConstraint;
@@ -82,7 +83,7 @@ Plate_Plate& operator= (const Plate_Plate& Ref)
   
   Standard_EXPORT void Load (const Plate_FreeGtoCConstraint& FGtoCConst);
   
-  Standard_EXPORT void SolveTI (const Standard_Integer ord = 4, const Standard_Real anisotropie = 1.0);
+  Standard_EXPORT void SolveTI (const Standard_Integer ord = 4, const Standard_Real anisotropie = 1.0, const Handle(Message_ProgressIndicator) & aProgress = NULL);
   
   //! returns True if all has been correctly done.
   Standard_EXPORT Standard_Boolean IsDone() const;
@@ -135,11 +136,11 @@ private:
   
     gp_XY& Points (const Standard_Integer index) const;
   
-  Standard_EXPORT void SolveTI1 (const Standard_Integer IterationNumber);
+  Standard_EXPORT void SolveTI1 (const Standard_Integer IterationNumber, const Handle(Message_ProgressIndicator) & aProgress = NULL);
   
-  Standard_EXPORT void SolveTI2 (const Standard_Integer IterationNumber);
+  Standard_EXPORT void SolveTI2 (const Standard_Integer IterationNumber, const Handle(Message_ProgressIndicator) & aProgress = NULL);
   
-  Standard_EXPORT void SolveTI3 (const Standard_Integer IterationNumber);
+  Standard_EXPORT void SolveTI3 (const Standard_Integer IterationNumber, const Handle(Message_ProgressIndicator) & aProgress = NULL);
   
   Standard_EXPORT void fillXYZmatrix (math_Matrix& mat, const Standard_Integer i0, const Standard_Integer j0, const Standard_Integer ncc1, const Standard_Integer ncc2) const;
 
